# PokerSim

./: .gitignore  LICENSE  pyproject.toml  setup.py
configs/: base.yaml
pokersim/experiment/: config.py  experiment.py  main.py
pokersim/game/: objects.py
scripts/: activate.sh  clean.sh  run.sh
